RESOLVED FIXED272822
[WPE][WebXR] Assertion fails `gl.checkFramebufferStatus(GL::FRAMEBUFFER) == GL::FRAMEBUFFER_COMPLETE` in `WebXROpaqueFramebuffer::blitShared()`
https://bugs.webkit.org/show_bug.cgi?id=272822
Summary [WPE][WebXR] Assertion fails `gl.checkFramebufferStatus(GL::FRAMEBUFFER) == G...
Vitaly Dyackhov
Reported 2024-04-17 07:59:44 PDT
Stack trace: ``` STDERR: ASSERTION FAILED: gl.checkFramebufferStatus(GL::FRAMEBUFFER) == GL::FRAMEBUFFER_COMPLETE STDERR: /app/webkit/Source/WebCore/Modules/webxr/WebXROpaqueFramebuffer.cpp(285) : void WebCore::WebXROpaqueFramebuffer::blitShared(WebCore::GraphicsContextGL&) STDERR: 1 0x7fd1be81e5a8 WTFCrash STDERR: 2 0x7fd1bab555f0 WTF::isIntegralOrPointerType() STDERR: 3 0x7fd1c0efb5df WebCore::WebXROpaqueFramebuffer::blitShared(WebCore::GraphicsContextGL&) STDERR: 4 0x7fd1c0efb445 WebCore::WebXROpaqueFramebuffer::endFrame() STDERR: 5 0x7fd1c0f1b9b8 WebCore::WebXRWebGLLayer::endFrame() STDERR: 6 0x7fd1c0f00446 operator() STDERR: 7 0x7fd1c0f181cc call STDERR: 8 0x7fd1bb47d4db WTF::Function<void ()>::operator()() const STDERR: 9 0x7fd1c0ef479e WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::WebXRSession>(WebCore::WebXRSession&, WebCore::TaskSource, WTF::Function<void ()>&&)::{lambda()#1}::operator()() const STDERR: 10 0x7fd1c0ef928a WTF::Detail::CallableWrapper<WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::WebXRSession>(WebCore::WebXRSession&, WebCore::TaskSource, WTF::Function<void ()>&&)::{lambda()#1}, void>::call() STDERR: 11 0x7fd1bb47d4db WTF::Function<void ()>::operator()() const STDERR: 12 0x7fd1c1ab01d6 WebCore::EventLoopFunctionDispatchTask::execute() STDERR: 13 0x7fd1c1aaf2c7 WebCore::EventLoop::run(std::optional<WTF::ApproximateTime>) STDERR: 14 0x7fd1c1c3b7e3 WebCore::WindowEventLoop::didReachTimeToRun() STDERR: 15 0x7fd1c1c52c88 void std::__invoke_impl<void, void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&>(std::__invoke_memfun_deref, void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&) STDERR: 16 0x7fd1c1c52bf3 std::__invoke_result<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&>::type std::__invoke<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&>(void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&) STDERR: 17 0x7fd1c1c52b69 void std::_Bind<void (WebCore::WindowEventLoop::*(WebCore::WindowEventLoop*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) STDERR: 18 0x7fd1c1c52afb void std::_Bind<void (WebCore::WindowEventLoop::*(WebCore::WindowEventLoop*))()>::operator()<, void>() STDERR: 19 0x7fd1c1c52956 WTF::Detail::CallableWrapper<std::_Bind<void (WebCore::WindowEventLoop::*(WebCore::WindowEventLoop*))()>, void>::call() STDERR: 20 0x7fd1bb47d4db WTF::Function<void ()>::operator()() const STDERR: 21 0x7fd1bb562928 WebCore::Timer::fired() STDERR: 22 0x7fd1c2a17b28 WebCore::ThreadTimers::sharedTimerFiredInternal() STDERR: 23 0x7fd1c2a17405 operator() STDERR: 24 0x7fd1c2a2147a call STDERR: 25 0x7fd1bb47d4db WTF::Function<void ()>::operator()() const STDERR: 26 0x7fd1c29c3752 WebCore::MainThreadSharedTimer::fired() STDERR: 27 0x7fd1c29cc39c void std::__invoke_impl<void, void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&>(std::__invoke_memfun_deref, void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&) STDERR: 28 0x7fd1c29cc315 std::__invoke_result<void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&>::type std::__invoke<void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&>(void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&) STDERR: 29 0x7fd1c29cc28b void std::_Bind<void (WebCore::MainThreadSharedTimer::*(WebCore::MainThreadSharedTimer*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) STDERR: 30 0x7fd1c29cc21d void std::_Bind<void (WebCore::MainThreadSharedTimer::*(WebCore::MainThreadSharedTimer*))()>::operator()<, void>() STDERR: 31 0x7fd1c29cc1e6 WTF::Detail::CallableWrapper<std::_Bind<void (WebCore::MainThreadSharedTimer::*(WebCore::MainThreadSharedTimer*))()>, void>::call() ```
Attachments
Vitaly Dyackhov
Comment 1 2024-04-17 08:11:55 PDT
EWS
Comment 2 2024-04-18 03:30:58 PDT
Committed 277659@main (9af3eb62b5fc): <https://commits.webkit.org/277659@main> Reviewed commits have been landed. Closing PR #27387 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-04-18 03:31:18 PDT
Note You need to log in before you can comment on or make changes to this bug.