[WPE][WebXR] Assertion fails `gl.checkFramebufferStatus(GL::FRAMEBUFFER) == GL::FRAMEBUFFER_COMPLETE` in `WebXROpaqueFramebuffer::blitShared()` https://bugs.webkit.org/show_bug.cgi?id=272822

Reviewed by Mike Wyrzykowski.

The WebXR session may end in the middle of the frame.
In this case, we should discard the frame because graphics resources
acquired by the session could already be deallocated.

* Source/WebCore/Modules/webxr/WebXRSession.cpp:
(WebCore::WebXRSession::onFrame):

Canonical link: https://commits.webkit.org/277659@main